--- a/crypto_config.json
+++ b/crypto_config.json
@@ -11,6 +11,18 @@
       "benchmark": 1.2,
       "delay_percentage" : 0.0,
       "interval_delay" : 1
+    },
+    "DOT-USD": {
+      "ema": 70,
+      "atr": 7,
+      "multiplier": 0.5,
+      "interval": "1h",
+      "start": "20230202 00",
+      "end": "20250202 00",
+      "return": 2.28,
+      "benchmark": 1.07,
+      "delay_percentage" : 0.0,
+      "interval_delay" : 1
     }
   }
 }
